Initial approach for Java 8 support